# chatgpt-client

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
chatgpt_client/: __init__.py  client.py  config.py
tests/: test_chatgpt_client.py
